fixed bug with markers not showing

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,6 @@
   font-size: large;
 }
 
-#map {
-  height: 100%;
-}
 /*
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
